<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">W8</string>
    <string name="todo1">TODO</string>
    <string name="lords">Lords</string>
    <string name="powered_by_w8">Powered By W8</string>
    <string name="bus_app">Bus App</string>
    <string name="connect_with_driver">Connecting With Driver</string>
    <string name="todo2">TODO</string>
    <string name="welcome">Welcome !</string>
    <string name="todo3">TODO2</string>
    <string name="student_login23">Student Login</string>
    <string name="driver_login">Driver Login</string>
    <string name="todo4">TODO</string>
    <string name="todo">todo5</string>
    <string name="title_activity_driverlogin">Driverlogin</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="student_login1">Student Login</string>
    <string name="hello_students">Hello Students!</string>
    <string name="Message">Message</string>
    <string name="title_activity_home">Home</string>
    <string name="create_account">Create Account</string>
    <string name="roll_number">Roll Number</string>
    <string name="password4">Password</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="student_login">Student Login</string>
    <string name="todo6">TODO</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="or_sign_in_with_google">Or Sign In With Google</string>
    <string name="todo8">TODO</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this Mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_91">+91</string>
    <string name="dash">__________</string>
    <string name="dash2">-__________</string>
    <string name="_9618211xxx">9618211xxx</string>
    <string name="DASH1">__________</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP ?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="dash4">________________</string>
    <string name="title_activity_send_o_t_p">SendOTP</string>
    <string name="hello_there">Hello There !</string>
    <string name="roll_number_">Roll Number :</string>
    <string name="password_">Password:</string>
    <string name="or">_____________ OR ___________</string>
    <string name="dash15">_______________Or_____________</string>
    <string name="or_">OR</string>
    <string name="email_id">Email Id:</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="W8">w8</string>
    <string name="todo6789">TODO</string>
    <string name="bus_app1">Bus App</string>
    <string name="lords_bus_app">Lords Bus App</string>
    <string name="sign_out">Sign Out</string>
    <string name="login_using_with">Login Using With</string>
    <string name="todo45">TODO</string>
    <string name="todo34">TODO</string>
    <string name="todoty">sdf</string>
    <string name="description">description</string>
    <string name="_5tgnjr">5tgnjr</string>
    <string name="ok">ok</string>
    <string name="todo009">TODO</string>
    <string name="todo678">TODO</string>
    <string name="bus1">Button</string>
    <string name="jntuh_mehdipatnam_college">JNTUH - MEHDIPATNAM - COLLEGE</string>
    <string name="bandlaguda_shalibanda_college">BANDLAGUDA - SHALIBANDA - COLLEGE</string>
    <string name="todo45678">TODO</string>
    <string name="tododj">TODO</string>
    <string name="todo5678">TODO</string>
    <string name="bus_no_2">Bus No.2</string>
    <string name="bus_no_5">Bus No.5</string>
    <string name="bai_ramal_guda_rajendra_nagar_college">BAI RAMAL GUDA - RAJENDRA NAGAR - COLLEGE</string>
    <string name="not_in_service">Not in Service</string>
    <string name="miyapur_langer_houser_college">MIYAPUR - LANGER HOUSER - COLLEGE</string>
    <string name="lb_nagar_nampally_college">LB NAGAR - NAMPALLY - COLLEGE</string>
    <string name="bus_no_3">Bus No.3</string>
    <string name="bus_no_4">Bus No.4</string>
    <string name="bus_no_7">Bus No.7</string>
    <string name="nerdmert_x_road_lakdikapool_college">NERDMERT X ROAD - LAKDIKAPOOL - COLLEGE</string>
    <string name="bus_no_6">Bus No.6</string>
    <string name="todo89651">TODO</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="todoss">erfg</string>
    <string name="login_via_otp">Login Via OTP</string>
    <string name="google_sign_up">Google SIgn Up</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_the_otp_we_just_sent_to_you_on_your_given_mobile_number">Enter the OTP we just sent to you on your given mobile Number</string>
    <string name="one">One</string>
    <string name="otp_authentication">OTP Authentication</string>
    <string name="todo896453">TODO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="_91_">91+</string>
    <string name="otp">OTP</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="you_re_number">You\'re Number</string>
    <string name="resend">Resend</string>
    <string name="if_you_didn_t_recieve_a_code">If you didn\'t recieve a code.</string>
    <string name="check_internet">Check Internet</string>
    <string name="OK">Please Enter Country Code and Phone Number</string>
    <string name="log_out">Log Out</string>
    <string name="verifyS">VERIFY</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="w8">W8</string>
    <string name="w8india_gmail_com">w8india@gmail.com</string>
    <string name="log_out_group_menu"><![CDATA[Log Out /> </group> </menu>]]></string>
    <string name="support_us">Support Us</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="Menu">Menus</string>
    <string name="or_login_with_google">or Login With Google</string>
    <string name="select_your_bus">Select Your Bus</string>
    <string name="bus_no_1">Bus No.1</string>
    <string name="share1">SHARE</string>
    <string name="tell_a_friend">Tell a Friend</string>
    <string name="tell_your_friend_how_you_reach_your_college_on_time_with_tracking_real_time_location_of_their_college_buses">Tell your friend, How you reach your college on time ,with Tracking Real Time Location of their College Buses</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="versoion_1_0_0">Versoion: 1.0.0</string>
    <string name="w8_is_an_application_which_track_the_real_time_location_of_college_buses">W8 is an Application which Track the Real Time Location Of College Buses</string>
    <string name="why_you_should_rate_us">Why you should Rate Us ?</string>
    <string name="rate_us">Rate Us</string>
    <string name="we_are_the_students_ofbachelor_engineering_rating_us_will_gave_a_more_confident_to_make_more_appwhich_would_help_you_in_future">We are the Students ofBachelor Engineering Rating us will gave a more Confident to make more appWhich would help you in Future</string>
    <string name="success_toast">Success Toast</string>
    <string name="click" />
    <string name="buttons">rf</string>
    <string name="orS">OR</string>
    <string name="we_are_the_students_of_bachelor_engineering_rating_us_will_gave_a_more_confident_to_make_more_app_which_would_help_you_in_future">We are the Students of Bachelor Engineering. Rating us will gave a more Confident to make more app Which would help you in Future.</string>
    <string name="refer_a_friend">Refer A Friend</string>
    <string name="tell_you_friend_how_you_reach_your_college_on_time_with_realtime_location_tracking_of_your_college_buses">Tell You Friend, How you reach your College on Time ,with Realtime Location Tracking Of your College Buses.</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="title_activity_maps">Map</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="bus_details">Bus Details</string>
    <string name="naseer_bhai">Naseer Bhai</string>
    <string name="_91_9966255198">+91 9966255198</string>
    <string name="bus_no_1_">BUS NO.1</string>
    <string name="naseer">NASEER</string>
    <string name="_91_9966255198_">91+ 9966255198</string>
    <string name="_9966255198">9966255198</string>
    <string name="number">Number:</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="driver">Driver :</string>
    <string name="numbernn">Number :</string>
    <string name="call_driver">Call Driver</string>
    <string name="hey_buddy_can_i_get_your_number">Hey Buddy, Can I get your Number ?</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="or_sign_up_with_google">or Sign Up With Google</string>
    <string name="or_you_can_login_with">Or You can login with</string>
    <string name="call">CALL</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="didn_t_recieve_code">Didn\'t Recieve Code ?</string>
    <string name="hyderabadfnlfljfnlnvlkfnvlkfhlfhldhfliuhfliudhflduhvlkjsdvnlsdkjvndsk">HyderabadfnlfljfnlnvlkfnvlkfhlfhldhfliuhfliudhflduhvlkjsdVNLSDKJVNDSK</string>
    <string name="address">Address:</string>
    <string name="current_location">Current Location:</string>
    <string name="name">Name</string>
    <string name="request_w8">Request W8</string>
    <string name="if_you_are_l8_make_your_bus_w8">If You Are L8 Make Your Bus W8</string>
    <string name="time_to_w8_bus">Time To W8 Bus</string>
    <string name="fill_your_details">Fill Your Details</string>
    <string name="mohammed_suhail_roushan_ali">Mohammed Suhail Roushan Ali</string>
    <string name="as_frontend_developer">As Frontend Developer</string>
    <string name="as_backend_developer">As Backend Developer</string>
    <string name="the_team">The Team</string>
    <string name="mohammed_izhan">Mohammed Izhan Ali</string>
    <string name="abdul_mannan">Abdul Mannan</string>
    <string name="syed_fawaz_ali">Syed Fawaz Ali</string>
    <string name="as_web_developer">As Web Developer</string>
</resources>