<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/messgae"

            android:title="@string/Message" />

        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/chat"
            android:title="@string/Message" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/share"
            android:title="@string/Message" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/chat"
            android:title="@string/Message" />

    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_shares"
                android:icon="@drawable/share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_sends"
                android:icon="@drawable/chat"
                android:title="@string/send" />
        </menu>
    </item>
</menu>











