<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Share">

    <ImageView
        android:id="@+id/imageView3"

        android:layout_width="match_parent"
        android:layout_height="374dp"
        app:srcCompat="@drawable/shares"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-16dp" />

    <Button
        android:id="@+id/share"
        android:layout_width="257dp"
        android:layout_height="51dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/circleround"


        android:fontFamily="@font/medium"
        android:text="@string/share1"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-400dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"


        android:text="@string/refer_a_friend"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="221dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="10dp"

        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/light"
        android:padding="20dp"
        android:text="@string/tell_you_friend_how_you_reach_your_college_on_time_with_realtime_location_tracking_of_your_college_buses"
        android:textColor="@color/black"
        android:textSize="27sp" />
</LinearLayout>