<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="5dp"

    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="406dp"
        android:layout_height="108dp"
        app:srcCompat="@drawable/circleround" />

    <ImageView
        android:id="@+id/idPic"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo678"
        app:srcCompat="@drawable/busdriver" />

    <TextView
        android:id="@+id/idTitle"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"


        android:layout_alignParentRight="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_toEndOf="@id/idPic"
        android:layout_toRightOf="@id/idPic"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/bus_no_1"
        android:textColor="@color/maincolor"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/idDescription"
        android:layout_width="239dp"
        android:layout_height="35dp"
        android:layout_below="@id/idTitle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"


        android:layout_marginStart="30dp"


        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_toEndOf="@id/idPic"
        android:layout_toRightOf="@id/idPic"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:text="@string/bai_ramal_guda_rajendra_nagar_college"
        android:textColor="#000000"
        android:textSize="15sp" />

</RelativeLayout>