<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".About">


    <ImageView
        android:id="@+id/imageView68"
        android:layout_width="408dp"

        android:layout_height="366dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/about" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469"
        android:layout_marginLeft="20dp">


    </TextView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/terms"
        android:layout_width="312dp"
        android:layout_height="63dp"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="@string/terms_and_conditions"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/privacy"
        android:layout_width="312dp"
        android:layout_height="63dp"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="@string/privacy_policy"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:text="@string/version_1_0_0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/privacy"
        app:layout_constraintVertical_bias="0.933" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/w8_is_an_application_which_track_the_real_time_location_of_college_buses"
        android:textColor="@color/black"

        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>

